Updates for Java -- open packages in launch and seede; augment open packages.